# llm-on-ray

./: .gitignore  .pre-commit-config.yaml  0001-pretrain-update-dockerfile.patch  Dockerfile  MANIFEST.in  README.md  codellama-13b-instruct-bigdl.yaml  format.sh  launch_workflow.py  mistral-7b-openorca.yaml  prompt.json  pyproject.toml  ray_start_command.sh  requirements.intel.cpu.pt2.txt  requirements.intel.gpu.txt  requirements.intel.txt  requirements.txt  run-hdfs.sh  run-ray-cluster.sh  run.sh  sqlcoder.bigdl.yaml  sqlcoder.yaml  sqlcoder_bench.py  wget-log  workflow.yaml
.github/license/: header_exclude_files.txt  license-header.py  license.header  llm_on_ray_header_files.txt
.github/workflows/: ci_system_daemon_clean_space.txt  night_build_memo.txt  setup_runner.txt  workflow_finetune.yml  workflow_finetune_gaudi2.yml  workflow_finetune_gpu.yml  workflow_getting_started.yml  workflow_inference.yml  workflow_inference_gaudi2.yml  workflow_lint.yml  workflow_orders on_merge.yml  workflow_orders.yml  workflow_orders_nightly.yml  workflow_orders_on_merge.yml  workflow_orders_on_pr.yml  workflow_test_benchmark.yml  workflow_tests.yml
Finetune/: Dockerfile  README.md  build-image.sh  finetune.conf  finetune.py  launch_workflow.py  llm_finetune_template.conf  llm_ppo_config.conf  llm_pretrain_template.conf  llm_rm_config.conf  main.py  main_ppo.py  megatron_pretrain_template.conf  ppo.conf  process_data.py  requirements.txt  reward.conf  run-ray-cluster.sh  run.md  run_clm_no_trainer_ray.py  run_minist_fsdp_ray.py  workflow.yaml
Finetune/configs/: hadoop-env.sh  hdfs-site.xml  workers
Finetune/plugin/: __init__.py  common.py  config.py  llm_finetune_configure_template.py  logging.py
Inference/: README.md  chat_process.py  config.py  model_finetune.py  run_model_infer.py  run_model_serve.py  start_ui.py
Inference/conf_file/: finetune.conf  llm_finetune_template.conf
Inference/config/: llm_finetune.conf
application/: Home.py  README.md  requirements.txt  streaming.py  utils.py
application/pages/: 1_1_basic_chatbot.py  1_LANGCHAIN_2_gluten_udf_codegen.py  1_LANGCHAIN_2_text_to_sql.py  1_LANGCHAIN_3_gluten_udf_codegen.py
benchmarks/: .gitignore  README.md  bench.log.1  bench.log.2  bench.log3  benchmark_run.sh  benchmark_serving.py  benchmark_visualize.py  calc_stats.py  run-benchmark-serving.sh  run-benchmark.sh  run-serve.sh  run_benchmark.sh  start-serving.sh
common/: __init__.py  common.py  config.py  init.py  load.py  logging.py  torch_config.py
common/agentenv/: __init__.py  agentenv.py  rlhf_env.py
common/dataprocesser/: __init__.py  dataprocesser.py  general_processer.py  rm_dataprocesser.py
common/dataset/: __init__.py  dataset.py  (+1 more)
configs/: core-site.xml  hdfs-site.xml
dev/k8s/: Dockerfile  (+2 more)
docs/: README.finetune.intel.gpu.md  README.inference.md  benchmark.md  benchmark_visualize.md  ci.md  finetune.md  finetune_parameters.md  pretrain.md  rlhf.md  serve.md  serve_bigdl.md  serve_deepspeed.md  serve_gaudi.md  serve_ipex-llm.md  setup.md  vllm.md  web_ui.md
examples/: README.md
experimental/: README.md  dolly_1_finetune.conf  dolly_2_finetune.conf  llm_finetune_config.template  llm_finetune_template.conf  llm_ppo_config.conf  llm_rm_config.conf  llm_rm_config.template  logging.conf  main.py  ppo.py  run.sh
finetune/: ds_config_zero2.json  ds_config_zero2.yaml  finetune.conf  finetune.py  finetune.yaml  finetune_config.py
infer/: README.md  run_model_infer.py  run_model_serve.py
inference/: README.md  api_server.py  api_server_openai.py  api_server_simple.py  app.py  benchmark_utils.py  chat_process.py  config.py  deepspeed_predictor.py  hpu_deepspeed_predictor.py  html_format.py  inference_config.py  logger.py  mllm_predictor.py  predictor.py  predictor_deployment.py  run_model_batch_predict.py  run_model_infer.py  run_model_serve.py  serve.py  start_ui.py  test_llm_ray_run.py  test_prompt.py  test_serve_api.py  torch_dist.py  transformer_predictor.py  utils.py  vllm_predictor.py
pretrain/: 0001-adapt-gpt-dataset.patch  0001-workaround-and-hot-fix-for-llm-ray.patch  README.md  megatron_deepspeed_pretrain.py  megatron_pretrain_template.conf  pretrain.py  requirements.optimum-habana.txt  requirements.txt
rlhf/: ppo.conf  ppo.py  reward.conf  reward.py  reward.yaml
scripts/: head_node_monitor.sh
tests/: basic_set.py  download_file.py  pytest.ini  requirements.txt  requirements_ut.txt  run-test.sh  run-tests-benchmark.sh  run-tests.sh  run_predicter_test.sh  run_test.sh  test_getting_started.sh  test_setup.sh
ui/: html_format.py  start_ui.py
vllm-ext/: MANIFEST.in  README.md  requirements.txt  setup.py  uninstall_vllm_ext.sh
vllm-ext/inference_engine/cpp/: CMakeLists.txt  clang-format.py
vllm-ext/inference_engine/cpp/bestla/: CMakeLists.txt
vllm-ext/inference_engine/cpp/bestla/bestla/: bestla_device.h  bestla_epilogue.h  bestla_gemm.h  bestla_parallel.h  bestla_storage.h  bestla_utils.h  bestla_wrapper.h  kernel_avx2.h  kernel_avx512_bf16.h  kernel_wrapper.h
vllm-ext/inference_engine/cpp/bestla/bestla/ut/: bestla_benchmark.cpp  bestla_gemm.cpp  bestla_prologue_b.cpp  kernel_jit.cpp  kernel_wrapper.cpp
vllm-ext/inference_engine/cpp/cmake/: ClangTidy.cmake  Common.cmake  ISA.cmake
vllm-ext/inference_engine/cpp/core/: CMakeLists.txt  ne.h  ne_bestla.h  ne_layers.c  ne_layers.h
vllm-ext/inference_engine/cpp/core/layers/: argsort.cpp  bestla_common.hpp  bestla_gemm.cpp  conv.cpp  ele_wise.h  inner_product.cpp  ip_fusion_ffn.cpp  ip_fusion_qkv.cpp  layers.h  mha_dense_tests.cpp  mha_dense_wrapper.h  ne_bestla.cpp  ne_test_layers_utils.hpp  vec_dot.h
vllm-ext/inference_engine/cpp/models/: CMakeLists.txt
vllm-ext/inference_engine/cpp/models/application/: CMakeLists.txt  common.cpp  common.h  data_types.h  vllm_cont_batch.cpp
vllm-ext/inference_engine/cpp/models/llama/: llama.cpp  llama_utils.cpp
vllm-ext/inference_engine/cpp/models/model_utils/: model_config.h  model_files.h  model_types.h  model_utils.cpp  model_utils.h  quant_utils.cpp  quant_utils.h  util.h
vllm-ext/inference_engine/cpp/vectors/: CMakeLists.txt
(+699 files in other folders)
